Fixed content tabs look on mobile

--- a/css/daria-style.css
+++ b/css/daria-style.css
@@ -158,6 +158,13 @@ h1 {
 	}
 }
 
+
+@media (max-width: 457px){
+	.nav-tabs li a {
+    		padding: 10px 8px!important;
+	}
+}
+
 /*-------------------------------------------------------------------------------------------*/
 /* LARGER SCREEN*/
 
@@ -172,7 +179,6 @@ h1 {
 		height: auto;
 	}
 }
-
 
 
 /*-------------------------------------------------------------------------------------------*/
